adding contact file

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="contact-information">
-		<h2 class="visually-hidden">Contact Information</h2>
+		<h2 class="visually-hidden">Contact Me</h2>
 			<address>
 				<dl>
 					<dt class="visually-hidden">Website Author</dt>
